# clinfo

./: .gitignore  Makefile.am  README.md  clinfo.c  configure.ac
m4/: ax_opencl.m4
